sites/all/themes/pul_development_theme/css/global.css
/* ... */
#zone-alpha, #region-advert-1, #region-advert-2 {
	height: 30px;
}
#region-advert-1 p, #region-advert-2 p {
  	margin-top: 4px;
}
#region-advert-1 a, #region-advert-2 a {
	color: #000000;
}
#region-advert-2 p {
	text-align: right;
}
#region-advert-2 {
	display: none;
}

#region-advert-2 a {
  text-decoration: none;
}



/*********************************************
 * Department Listing Fixes
 *********************************************/

.page-staff-departments .views-row {
	padding-bottom: 0;
}

.single-department-page .grid-9 h3 {
	padding-top: 0;
}
.single-department-page .grid-9 caption h4 {
	text-align: left;
	padding-top: .1em;
	padding-bottom: .1em;
}


/* Form fitting */

textarea, input[type="text"], input[type="email"] {
    width: 100%;
}
input[type='text'],input[type='email'],input[type='phone'],input[type='address'],textarea {font-size:16px;}

#region-postscript-third {
height:400px;
}

/***
 * WebForm Style Corrections
 */

.webform-component input[type="text"], .webform-component input[type="email"],
.webform-component input[type='phone'], .webform-component input[type='address'] {
	width: auto;
}
#webform-component-media .webform-container-inline label,
#webform-component-cleaning-supplies .webform-container-inline label,
#webform-component-computer-accessories .webform-container-inline label,
#webform-component-barcodes .webform-container-inline label {
	width: 200px;
	display: inline-block;
}
#webform-component-printerfieldset1 .webform-container-inline,
#webform-component-miscellaneous-items .webform-container-inline {
	float: left;
	margin-right: 5px;
}
.qtywrapper {
	display: inline-block;
}

/* Bottom Menu Links */

.block-menu .block-title a:after {
	font-family: fontAwesome;
	padding-left: 5px;
	content: "\F054\F054";
}

/* CDL Styles */

/* .pane-node-field-pul-landing-logo { */
.top-region.grid-12.panel-panel {
  background-image:url(../images/trustee_reading_room_50.png);
  clear: both;  
  background-position: center top;
  background-repeat: no-repeat;
  background-color: #212121;
}

/* for 9-3 layout fix */
.context-collections .left-region.grid-9 {
	margin-left: .75em;
}

.node-type-pul-landing-page .pane-node-field-pul-landing-logo {
	padding-bottom: .5em;
}

/* Spotlight Graphic */
.pane-spotlight-graphics-panel-pane-1 {
 border: .2em solid #5c5e66;
 margin-top: 2.5em;
 background-color: #000;
  
}

.pane-spotlight-graphics-panel-pane-1 h3 {
 padding:0;
 padding-top: .2em;
 margin:0;
 text-align: left;
}

.pane-spotlight-graphics-panel-pane-1 h3 a {
  padding-left: 2em;
  color: #fff;
  margin-bottom:0;
}

.pane-spotlight-graphics-panel-pane-1 h3 a:hover {
  
}

/* CDL Overrides */
.context-collections-and-collection-development h2, .context-collections h2 {
  color: #212121;
}


/* CDL Menu */
.pane-nice-menus-2 {
  background-color: none;
  clear: both;
}


ul.nice-menu.nice-menu-menu-collection-development-webs {
  text-align: center;
  z-index: 0;
  background: none;
  margin-top: 0px;
  border-top: none;
}

ul.nice-menu.nice-menu-menu-collection-development-webs li {
 background: none;
 border: none;
}

ul.nice-menu.nice-menu-menu-collection-development-webs li a {
    font-size: 1em;
    color: #fff;
    background: none;
    padding-right: 1.7em;
    padding-left: 1.7em;
    text-decoration: none;
  } 

ul.nice-menu.nice-menu-menu-collection-development-webs li a:hover, ul.nice-menu.nice-menu-menu-collection-development-webs li a.active {
    font-size: 100%;
    color: #F58026;
  }

/* !Important Dropdowns */
ul.nice-menu.nice-menu-menu-collection-development-webs ul {
  top: 2.4em;
  left: .lem;
  background-color: #000;
  padding:0;
  border:0;
  margin:0;
}

/* Arrows 

.context-collections ul.nice-menu.nice-menu-menu-collection-development-webs.nice-menu-down li.menuparent,
.context-collections ul.nice-menu.nice-menu-menu-collection-development-webs.nice-menu-down li li.menuparent {
  background: #000; url("../images/arrow-down.png") right center no-repeat;
}
*/

.context-collections-and-collection-development #block-system-main-menu, .context-collections #block-system-main-menu {
	z-index: 1333;
}

.context-collections-and-collection-development #section-header, .context-collections #section-header {
	z-index: 1666;
}

.context-collections-and-collection-development #section-content, .context-collections #section-content {
	z-index: 1111;
}

ul.nice-menu.nice-menu-menu-collection-development-webs .menuparent a {
  padding-right: 15px;
  color: #fff;
  font-size: 1em;
}

ul.nice-menu.nice-menu-menu-collection-development-webs .menuparent a:hover {
  padding-right: 15px;
  color: #F58026;
}


.context-collections .top-region.panel-panel.grid-12 {
	z-index: 999;
}
/* Override for Z-index issue for CDL menu */
.context-collections .panel-panel.grid-9, .context-collections .panel-panel.grid-3 {
  z-index: 1;
}

.context-collections-and-collection-development #block-system-main-menu, .context-collections #block-system-main-menu {
	z-index: 1222;
}

.context-collections-and-collection-development .panel-pane.panel-pane.pane-block.pane-nice-menus-2 {
	z-index: 999;
}

.context-collections-and-collection-development .panel-pane.panel-pane.pane-block.pane-nice-menus-2 ul.nice-menu-menu-collection-development-webs {
	z-index: 666;
}


.context-collections-and-collection-development .panel-pane.pane-views-panes.pane-spotlight-graphics-panel-pane-1 {
	z-index: 1;
}

/* Views Alignment for selector Profile Page */

.node-type-subject-specialists .field-type-text {
  display: inline;
}


.views-field-field-puluser-officialtitle h3, .node-type-subject-specialists .views-field-field-selector-subject-areas > h3.views-label-field-selector-subject-areas {
  margin: 0 0 0 0;
}

.node-type-subject-specialists .views-field-field-selector-subject-areas {
 clear: both;
}

.views-field-field-puluser-officialtitle h3 {
  margin-bottom: .5em;
}
/* ... */

